[package]
name = "streamwatch"
version = "0.1.0"
authors = ["Lieuwe Rooijakkers <lieuwerooijakkers@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"

futures = "0.3"

tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.3", features = ["fs"] }

warp = { version = "0.3", features = ["compression"] }

async-compression = { version = "0.3.7", features = ["zstd", "tokio"] }

rusqlite = "0.24.2"
diesel = { version = "1.4.4", features = ["sqlite", "chrono", "serde_json"] }

once_cell = "1.4.0"

serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde_yaml = "0.8"

chrono = "0.4.19"

uuid = { version = "0.8", features = ["serde", "v4"] }
