[package]
name = "streamwatch"
version = "0.1.0"
authors = ["Lieuwe Rooijakkers <lieuwerooijakkers@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
debug = true

[dependencies]
streamwatch-shared = { path = "./streamwatch-shared" }

regex = "1"

futures = "0.3"

tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.3", features = ["fs"] }

warp = { version = "0.3", features = ["compression"] }

async-compression = { version = "0.3.7", features = ["zstd", "tokio"] }

sqlx = { version = "0.5.2", features = [ "runtime-tokio-native-tls", "sqlite", "macros" ] }

once_cell = "1.4.0"

serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde_yaml = "0.8"

chrono = "0.4.19"

uuid = { version = "1.0", features = ["serde", "v4"] }

anyhow = { version = "1", features = ["backtrace"] }

log = "0.4.0"
env_logger = "0.9.0"

itertools = "0.10.3"
