[package]
name = "streamwatch-shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"

futures = "0.3"

tokio = { version = "1", features = ["full"] }

once_cell = "1.4.0"

serde = { version = "1", features = ["derive"] }
#serde_json = { version = "1.0", features = ["raw_value"] }
serde_yaml = "0.9"

chrono = { version = "0.4.19", features = ["serde"] }

anyhow = { version = "1", features = ["backtrace"] }

#itertools = "0.10.3"
